# cs50-2020

./: .gitignore  README.md  credit.c  mario.c  phonebook.csv  plurality  plurality.c  pseudo.txt  readability.c  runoff  substitution.c  tideman  tideman.c
final/: README.md  character.py  control.py  detect.py  error.py  main.py  menu.json  menu.py  npc.py  pyproject.toml  requirements.txt  reset.py  resources.py  run.py  server.pkl  symetry.py  test.py  text.py  transform.py  utils.py
final/models/: character.py  image.py  item.py  menu.py  npc.py  resources.py  text.py
final/samples/: captcha-failed20230624-141253322.json  captcha-failed20230625-141253322.json
final/samples/label/: captcha-failed20230625-141253322.json  captcha-failed20230625-172541147.json
pset01/: credit  credit.c  hello
pset01/credit/: credit.c
pset01/mario/: mario.c
pset01/population/: population.c
pset02/: readability  readability.c  scrabble  scrabble.c  substitution  substitution.c
pset02/substitution/: substitution.c
pset03/: answer.txt  plurality  runoff.c  tideman
pset03/plurality/: plurality.c
pset03/tideman/: data.txt  tideman.c
pset04/filter-more/: filter  filter.c  helpers.c
pset04/lap/: volume.c
pset04/recover/: Makefile  recover  recover.c
pset05/inheritance/: inheritance  inheritance.c
pset05/speller/: dictionary.c  dictionary.h  speller  speller.c
pset06/dna/: dna.py
pset06/sentimental-credit/: credit.py
pset06/sentimental-mario-more/: mario.py
pset07/: test.sql
pset09/birthdays/: app.py  birthdays.db  pyproject.toml
pset09/birthdays/templates/: base.html  birthday-form.html  birthday-table.html  index.html  layout.html  nav-bar.html
pset09/finance/: app.py  error.py  finance.db  helpers.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.sql
pset09/finance/.run/: flask-debug.run.xml
pset09/finance/modules/: portfolios.py  tickers.py  txns.py  users.py
pset09/finance/static/: buy.js  component.js  helper.js  navbar.js  quote.js  sell.js
pset09/finance/templates/components/: alert.html  head.html  layout.html  navbar.html
pset09/finance/templates/pages/: apology.html  buy.html  history.html  index.html  login.html  portfolio.html  quote.html  register.html  sell.html
(+32 files in other folders)
