[tool.poetry]
name = "final"
version = "0.1.0"
description = "CS50 Final Project"
authors = ["VitaHoang <hvhung.oc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.7.1"
pyautogui = "^0.9.54"
psutil = "^5.9.5"
pylint = "^2.17.4"
pytesseract = "^0.3.10"
rembg = "^2.0.45"
opencv-contrib-python = "^4.7.0.72"
setuptools = "^68.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
