[tool.poetry]
name = "birthdays"
version = "0.1.0"
description = ""
authors = ["VitaHoang <hvhung.oc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
Flask = "^2.2.2"
cs50 = "^9.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
