[tool.poetry]
name = "finance"
version = "0.1.0"
description = "Implement a website via which users can “buy” and “sell” stocks"
authors = ["VitaHoang <hvhung.oc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
cs50 = "^9.2.5"
flask = "^2.2.2"
werkzeug = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
