[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["VitaHoang <hvhung.oc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cs50 = "^9.2.5"
Flask = "^2.3.2"
Flask-Session = "^0.5.0"
requests = "^2.31.0"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
